# bitvm

./: Cargo.toml
components/bitvm-cli/: Cargo.toml
components/bitvm-cli/src/cli/: mod.rs
components/bitvm-cli/src/config/: file.rs  generator.rs  mod.rs
components/bitvm-core/: Cargo.toml
components/bitvm-core/src/: lib.rs
components/bitvm-core/src/bristol/: bristol.gram  generator.rs  parser.rs
components/bitvm-core/src/bristol/fixtures/: test_vector_1.bristol  test_vector_2.bristol
components/bitvm-core/src/circuit/: mod.rs
components/bitvm-core/src/tapleaf/: anti_contradiction_address.rs  challenge_address.rs  commitment_address.rs  mod.rs
components/bitvm-types/: Cargo.toml
components/bitvm-types/src/: lib.rs
